compiler/lume_parser/src/snapshots/lume_parser__tests__operator_snapshots@greater_equal.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_expr(\"a >= b;\")"
---
[
    Expression(
        IntrinsicCall(
            IntrinsicCall {
                kind: GreaterEqual {
                    lhs: Variable(
                        Variable {
                            name: Identifier {
                                name: "a",
                                location: Location(
                                    0..1,
                                ),
                            },
                        },
                    ),
                    rhs: Variable(
                        Variable {
                            name: Identifier {
                                name: "b",
                                location: Location(
                                    5..6,
                                ),
                            },
                        },
                    ),
                },
                location: Location(
                    0..6,
                ),
            },
        ),
    ),
]
