compiler/lume_parser/src/snapshots/lume_parser__tests__operator_snapshots@multiply.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_expr(\"a * b;\")"
---
[
    Expression(
        Call(
            Call {
                callee: Some(
                    Variable(
                        Variable {
                            name: Identifier {
                                name: "a",
                                location: Location(
                                    0..1,
                                ),
                            },
                        },
                    ),
                ),
                name: Path {
                    root: [],
                    name: PathSegment {
                        name: Identifier {
                            name: "*",
                            location: Location(
                                2..3,
                            ),
                        },
                        type_arguments: [],
                        location: Location(
                            2..3,
                        ),
                    },
                    location: Location(
                        2..3,
                    ),
                },
                arguments: [
                    Variable(
                        Variable {
                            name: Identifier {
                                name: "b",
                                location: Location(
                                    4..5,
                                ),
                            },
                        },
                    ),
                ],
                type_arguments: [],
                location: Location(
                    0..5,
                ),
            },
        ),
    ),
]
