compiler/lume_parser/src/snapshots/lume_parser__tests__operator_snapshots@negation.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"!a;\")"
---
SOURCE_FILE@0..3
  EXPR_STMT@0..3
    UNARY_EXPR@0..2
      NOT@0..1 "!"
      VARIABLE_EXPR@1..2
        NAME@1..2
          IDENT@1..2 "a"
    SEMICOLON@2..3 ";"
